# backend/docs/swagger.yaml
@@ -113,13 +113,58 @@ definitions:
         additionalProperties: {}
         type: object
     type: object
-host: localhost:8080
+host: localhost:8081
 info:
   contact: {}
   description: This is a data processing pipeline API.
   title: Pipeline Processing API
   version: "1.0"
 paths:
+  /api/v1/pipelines:
+    get:
+      description: Get a list of all pipeline jobs
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_SsagarikaR_pipeline-processing_internal_models.Job'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all pipeline jobs
+    post:
+      consumes:
+      - application/json
+      description: Create a new pipeline job with specified input, transform, aggregate,
+        and export stages
+      parameters:
+      - description: Job Specification
+        in: body
+        name: job
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_SsagarikaR_pipeline-processing_internal_pipeline.JobSpec'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_SsagarikaR_pipeline-processing_internal_models.Job'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Create a pipeline job
   /api/v1/pipelines/{id}/cancel:
     patch:
       description: Cancel a running pipeline job by ID
@@ -224,52 +269,7 @@ paths:
           schema:
             type: string
       summary: Get pipeline results
-  /pipelines:
-    get:
-      description: Get a list of all pipeline jobs
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/github_com_SsagarikaR_pipeline-processing_internal_models.Job'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Get all pipeline jobs
-    post:
-      consumes:
-      - application/json
-      description: Create a new pipeline job with specified input, transform, aggregate,
-        and export stages
-      parameters:
-      - description: Job Specification
-        in: body
-        name: job
-        required: true
-        schema:
-          $ref: '#/definitions/github_com_SsagarikaR_pipeline-processing_internal_pipeline.JobSpec'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/github_com_SsagarikaR_pipeline-processing_internal_models.Job'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Create a pipeline job
-  /pipelines/{id}:
+  /api/v1pipelines/{id}:
     delete:
       description: Delete a specific pipeline job and its artifacts by ID
       parameters:
@@ -294,6 +294,7 @@ paths:
           schema:
             type: string
       summary: Delete a pipeline job
+  /pipelines/{id}:
     get:
       description: Get details of a specific pipeline job by ID
       parameters:
